# LMCtrlF

./: .editorconfig  .gitignore  LICENSE  README.md  environment.yml  package-lock.json  package.json  pnpm-lock.yaml
.skill/: debugging.md  electron-dev.md  index.md  packaging.md  python-sidecar.md
apps/desktop/: electron-builder.json  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/electron/: backend.test.ts  backend.ts  config.test.ts  config.ts  main.ts  preload.cjs  preload.ts  runtime-config.test.ts  runtime-config.ts
apps/desktop/scripts/: build.mjs  dev-placeholder.mjs  dev.mjs  package-mac.sh  package-win.ps1
apps/desktop/src/: App.test.tsx  App.tsx  api.ts  assets.test.ts  assets.ts  defaults.ts  env.d.ts  mockData.ts  runtime.ts  styles.css
apps/desktop/static/: index.html
docs/: README.md  api.md  architecture.md  packaging.md  setup.md  testing.md
services/backend/: README.md  pyproject.toml
services/backend/app/: db.py  indexing.py  lancedb_store.py  lmstudio_chat.py  main.py  model_settings.py  models.py
services/backend/app/api/: chat.py  projects.py  settings.py
services/backend/app/core/: config.py
services/backend/scripts/: package_backend.py
services/backend/tests/: conftest.py  test_chat.py  test_health.py  test_main.py  test_packaging.py  test_projects.py
