[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lmctrlf-backend"
version = "0.1.0"
description = "Python sidecar for the LMCtrlF desktop application."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.28.1",
  "lancedb>=0.24.3",
  "peewee>=3.17.0",
  "pypdf>=5.4.0",
  "pydantic-settings>=2.9.1",
  "uvicorn>=0.34.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
  "pytest-asyncio>=0.26.0"
]

[project.scripts]
lmctrlf-backend = "app.main:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools]
packages = ["app"]
